--- a/pom.xml
+++ b/pom.xml
@@ -64,4 +64,39 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.jpa_practica1.Jpa_practica1</exec.mainClass>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source> <!-- Cambia esto si usas una versión diferente de Java -->
+                    <target>17</target> <!-- Cambia esto si usas una versión diferente de Java -->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.mycompany.jpa_practica1.Jpa_practica1</mainClass> <!-- Cambia esto a tu clase main -->
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+        </plugins>
+    </build>
+    <name>Vega_Cristian_jpa_practica</name>
 </project>
